<resources>
    <string name="app_name">MTX Coronavirus Response<br> (COVID-19)</br></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_signout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="survey_instructions_heading">Instructions</string>
    <string name="survey_instructions_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="survey_instructions_start_button">Start survey</string>
    <string name="survey_sub_heading1">Please chose one of the options below.</string>
    <string name="survey_sub_heading2">Please choose all that apply. If none apply, click next.</string>
    <string name="survey_next_button">Next</string>
    <string name="survey_previous_button">Previous</string>
    <string name="survey_done_button">Done</string>
    <string name="survey_back_home_button">Back To Home</string>
    <string name="survey_yes_button">Yes</string>
    <string name="survey_no_button">No</string>
    <string name="survey_unsure_button">Unsure</string>
    <string name="survey_language_heading">Choose language:"</string>
    <string name="survey_language_en">EN"</string>
    <string name="survey_language_english">English</string>
    <string name="survey_language_sp">SP"</string>
    <string name="survey_language_spanish">Spanish</string>
    <string name="survey_enable_notification_heading">Enable Exposure Notifications?</string>
    <string name="survey_age_selector_heading">Please select your age range:</string>
    <string name="survey_age_selector_sub_heading">Slide to choose your age group.</string>
    <string name="survey_age_selector_under18">Under\n18</string>
    <string name="survey_age_selector_30">18–30</string>
    <string name="survey_age_selector_50">31–50</string>
    <string name="survey_age_selector_64">51–64</string>
    <string name="survey_age_selector_64plus">64+</string>
    <string name="survey_country_heading">Where do you live?</string>
    <string name="survey_country_sub_heading">Are you a USA Resident?</string>
    <string name="survey_country_et_heading">Select Your Country of Residency:</string>
    <string name="survey_country_et_hint">Choose one</string>
    <string name="survey_gender_heading">What is your sex?</string>
    <string name="survey_gender_male">Male</string>
    <string name="survey_gender_female">Female</string>
    <string name="survey_gender_skip">SKIP</string>
    <string name="survey_travel_history_heading">Have you travelled anywhere recently?</string>
    <string name="survey_travel_history_sub_heading">(within the last 14 days)</string>
    <string name="survey_travel_history_where">Where?</string>
    <string name="survey_travel_history_et_hint">Please list all the cities you have visited</string>
    <string name="survey_contact_sharing_heading">Would you be willing to share your contacts with the department of health?</string>
    <string name="survey_contact_sharing_sub_heading">Please chose one of the options below.</string>
    <string name="notification_heading">Notifications</string>
    <string name="notification_dropdown_hint">Unread</string>
    <string name="survey_details_heading">Please add the names and relationships for the people you have been around most recently</string>
    <string name="survey_details_choose_relationship">Choose the relationship</string>
    <string name="survey_details_gender">Gender</string>
    <string name="survey_details_age">Age</string>
    <string name="survey_details_name">Enter the Full Name</string>
    <string name="survey_details_address1">Address Line</string>
    <string name="survey_details_address2">City, State and Zip</string>
    <string name="survey_details_phone">Phone Number</string>
    <string name="survey_details_save">Save</string>
    <string name="survey_details_add_another">Add Another Person</string>
    <string name="survey_covid_testing">Have you tested positive for COVID-19?</string>
    <string name="survey_close_contact">Have you been in close contact with someone who has COVID-19?</string>
    <string name="survey_how_feeling_heading">How are you feeling?</string>
    <string name="survey_how_feeling_sick">Sick</string>
    <string name="survey_how_feeling_well">Well</string>
    <string name="survey_symptoms_heading">Are you experiencing any of these symptoms?</string>
    <string name="survey_symptoms_fever">Fever</string>
    <string name="survey_symptoms_cough">Cough</string>
    <string name="survey_symptoms_breadth">Shortness of breadth</string>
    <string name="survey_seek_medical_care_heading">Do you paln to seek medical care?</string>
    <string name="survey_preconditions_heading">Select any pre-existing condition(s) you have:</string>
    <string name="survey_preconditions1">Heart Disease</string>
    <string name="survey_preconditions2">Asthma</string>
    <string name="survey_preconditions3">Lung Disease</string>
    <string name="survey_preconditions4">Diabetes</string>
    <string name="survey_preconditions5">Cancer</string>
    <string name="survey_preconditions6">Auto-immune Disease</string>
    <string name="survey_preconditions7">Obesity</string>
    <string name="survey_prevention_heading">Are you taking any steps to prevent the spread of COVID-19?</string>
    <string name="survey_prevention1">Social distancing</string>
    <string name="survey_prevention2">Frequently washing hands</string>
    <string name="survey_prevention3">Avoiding close contact with others and crowds</string>
    <string name="survey_prevention4">Reducing or avoiding travel</string>
    <string name="survey_prevention5">Staying home if sick</string>
    <string name="survey_prevention6">Daily cleaning and disinfection of frequntly touched surfaces.</string>
    <string name="survey_concerns_heading">As a result of COVID-19 concerns, are you doing any of the following?</string>
    <string name="survey_concerns1">Consulting the Centers for Disease Control and Prevention website for information</string>
    <string name="survey_concerns2">Consulting the US Department of Health website for information</string>
    <string name="survey_concerns3">Consulting my doctor</string>
    <string name="survey_concerns4">Keeping household members at home while the outbreak lasts</string>
    <string name="survey_concerns5">Stocking up on medicines</string>
    <string name="survey_concerns6">Other</string>
    <string name="survey_thanks_heading">Thank you for submitting the survey!</string>
    <string name="survey_thanks_sub_heading">Please take a moment to review the COVID-19 related links below.</string>
    <string name="survey_thanks_link1">U.S Department of Health</string>
    <string name="survey_thanks_lin2">Coronavirus disease 2019 - World Health Organisation</string>
    <string name="survey_history">Survey History</string>
    <string name="survey_history_empty_view">Crunching latest data</string>
    <string name="navigation_take_survey">Take the survey</string>
    <string name="navigation_survey_hsitory">Survey History</string>
    <string name="navigation_exposure">My Proximity Exposure</string>
    <string name="navigation_language">Language Options</string>
    <string name="navigation_notifications">Notifications</string>
    <string name="navigation_exposure_settings">Exposure Settings</string>
    <string name="navigation_guidelines">Covid-19 precautions and guidance from the CDC</string>
    <string name="proximity_exposure_heading">Symptomatic Exposures in Proximity</string>
    <string name="registration_heading">Sign Up"</string>
    <string name="registration_mobile_no">Mobile No.</string>
    <string name="registration_note">NOTE : Mobile No. will be verifed by OTP, make sure you enter correct number.</string>
    <string name="registration_signin">Already registerd ? Sign in</string>
    <string name="residency_country_prompt">Choose one</string>
</resources>