<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_age_selector_heading"
        android:gravity="center_horizontal"
        style="@style/SurveyHeading"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_age_selector_sub_heading"
        style="@style/SurveyBody"/>

    <SeekBar
        android:id="@+id/survey_age_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="12dp"
        android:min="18"
        android:max="65"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/seek_thumb"
        android:progress="50"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/survey_age_selector_under18"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/survey_age_selector_30"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/survey_age_selector_50"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/survey_age_selector_64"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/survey_age_selector_64plus"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_margin="32dp">

        <TextView
            android:id="@+id/survey_age_previous_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/survey_previous_button"
            style="@style/SurveyPrevious"/>

        <TextView
            android:id="@+id/survey_age_next_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/survey_next_button"
            style="@style/SurveyNext"/>


    </LinearLayout>

</LinearLayout>