<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_covid_testing"
        android:gravity="center_horizontal"
        style="@style/SurveyHeading"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_sub_heading1"
        style="@style/SurveyBody"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:gravity="center">

        <Button
            android:id="@+id/survey_testing_no_btn"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:text="@string/survey_no_button"
            style="@style/SurveyButtonLayout"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/survey_testing_yes_btn"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:text="@string/survey_yes_button"
            style="@style/SurveyButtonLayout"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_margin="32dp">

        <TextView
            android:id="@+id/survey_testing_previous_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/survey_previous_button"
            style="@style/SurveyPrevious"/>

        <TextView
            android:id="@+id/survey_testing_next_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/survey_next_button"
            style="@style/SurveyNext"/>


    </LinearLayout>

</LinearLayout>