<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_enable_notification_heading"
        android:gravity="center_horizontal"
        style="@style/SurveyHeading"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_sub_heading1"
        style="@style/SurveyBody"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:gravity="center">

    <Button
        android:id="@+id/survey_notification_no_btn"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:text="@string/survey_no_button"
        style="@style/SurveyButtonLayout"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/survey_notification_yes_btn"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:text="@string/survey_yes_button"
        style="@style/SurveyButtonLayout"
        android:layout_marginStart="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:layout_margin="32dp">

        <TextView
            android:id="@+id/survey_notification_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/survey_done_button"
            android:textSize="16dp"
            android:textColor="#376DC8"
            android:drawableEnd="@drawable/ic_next"
            android:drawablePadding="8dp"/>


    </LinearLayout>

</LinearLayout>