<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/registration_heading"
        style="@style/SurveyHeading"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tv_mobile_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/registration_mobile_no"
        android:padding="16dp"
        android:background="@drawable/edit_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="sans-serif"
        android:text="@string/registration_note"
        android:textColor="#000000" />


    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/registration_signin"
        android:textSize="18sp"
        android:textAlignment="center" />

</LinearLayout>