<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_travel_history_heading"
        android:gravity="center_horizontal"
        style="@style/SurveyHeading"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey_travel_history_sub_heading"
        style="@style/SurveyBody"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/survey_th_no_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_thumdown"
                style="@style/SurveyButtonLayout"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/survey_th_no_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_no_button"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/survey_th_yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_thumup"
                style="@style/SurveyButtonLayout"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/survey_th_yes_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_yes_button"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/survey_th_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_travel_history_where"
        android:gravity="center_horizontal"
        style="@style/SurveyHeading"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/survey_th_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="16dp"
        android:background="@drawable/edit_text"
        android:hint="@string/survey_travel_history_et_hint"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_margin="32dp">

        <TextView
            android:id="@+id/survey_th_previous_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/survey_previous_button"
            style="@style/SurveyPrevious"/>

        <TextView
            android:id="@+id/survey_th_next_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/survey_next_button"
            style="@style/SurveyNext"/>


    </LinearLayout>

</LinearLayout>